improvements to ConfigDataSet